# garraiobide

./: .bazelrc  .gitignore  CMakeLists.txt  MODULE.bazel  README.md  conanfile.txt
.github/workflows/: ci.yml
docker/: docker-compose.yml
frontend/: app.js  index.html  style.css
scripts/: dev.sh
src/: BUILD.bazel  CMakeLists.txt  main.cc  main.cpp
src/adapters/cli/: BUILD.bazel  mock_cli_adapter.cc  mock_cli_adapter.h
src/adapters/http/: BUILD.bazel  geojson_serializer.cc  geojson_serializer.h  http_adapter.cc  http_adapter.h
src/adapters/ingestion/: BUILD.bazel  mock_ingestion_adapter.cc  mock_ingestion_adapter.h
src/adapters/ingestion/gtfs/: BUILD.bazel  csv_parser.h  gtfs_ingestion_adapter.cc  gtfs_ingestion_adapter.h  gtfs_parser.cc  gtfs_parser.h
src/adapters/persistence/: BUILD.bazel  file_persistence_adapter.cc  file_persistence_adapter.h  mock_persistence_adapter.cc  mock_persistence_adapter.h
src/adapters/ui/: BUILD.bazel  mock_presentation_adapter.cc  mock_presentation_adapter.h
src/app/: BUILD.bazel  app_config.h  layer_service.cc  layer_service.h  parse_args.cc  parse_args.h
src/core/: LogLevel.hpp  args.cpp  args.hpp  config.cpp  config.hpp  line.cpp  line.hpp  log_level.hpp  logger.cpp  logger.hpp  resource.cpp  resource.hpp  resource_type.hpp  stop.cpp  stop.hpp  stop_in_line.cpp  stop_in_line.hpp  stop_in_trip.cpp  stop_in_trip.hpp  trip.cpp  trip.hpp
src/core/domain/: BUILD.bazel  bounding_box.h  coordinate.h  geo_feature.h  geometry.h  layer.cc  layer.h  properties.h
src/core/ports/: BUILD.bazel  cli_port.h  data_ingestion_port.h  persistence_port.h  presentation_port.h
src/data/: mongodb_driver.hpp  mongodb_manager.cpp  mongodb_manager.hpp
src/data/mongo/: mongodb_driver.hpp  mongodb_manager.cpp  mongodb_manager.hpp  stop_repository.cpp  stop_repository.hpp
src/data/postgis/: postgis_manager.cpp  postgis_manager.hpp
src/gtfs/: agency.cpp  agency.hpp  gtfs_fields.hpp  gtfs_files.hpp  gtfs_manager.cpp  gtfs_manager.hpp  route.cpp  route.hpp  shape.cpp  shape.hpp  stop.cpp  stop.hpp  stop_time.cpp  stop_time.hpp  trip.cpp  trip.hpp
src/init/: run.cpp  run.hpp  run_ingest.cpp  run_ingest.hpp  run_stats.cpp  run_stats.hpp
src/io/: csv_reader.cpp  csv_reader.hpp  geojson_reader.cpp  geojson_reader.hpp  http_client.cpp  http_client.hpp  temp_file.cpp  temp_file.hpp  zip_file.cpp  zip_file.hpp  zip_reader.cpp  zip_reader.hpp
src/server/: BUILD.bazel  main.cc
src/tools/gtfs_ingest/: BUILD.bazel  main.cc
src/ui/: Color.hpp  color.cpp  color.hpp
tests/: BUILD.bazel  CMakeLists.txt  domain_test.cc  e2e_coordinate_consistency_test.cc  file_persistence_property_test.cc  file_persistence_test.cc  geojson_reader_test.cpp  geojson_serializer_property_test.cc  geojson_serializer_test.cc  gtfs_agency_name_test.cc  gtfs_bbox_filter_test.cc  gtfs_csv_parser_test.cc  gtfs_ingest_integration_test.cc  gtfs_metadata_test.cc  gtfs_persistence_roundtrip_test.cc  gtfs_route_geometry_test.cc  gtfs_stop_classification_test.cc  gtfs_test.cpp  http_adapter_test.cc  layer_service_test.cc  parse_args_test.cc
tests/core/: args_test.cpp  config_test.cpp  resource_test.cpp
tests/gtfs/: gtfs_manager_test.cpp
tests/io/: csv_reader_test.cpp  geojson_reader_test.cpp  main_test.cpp  zip_file_test.cpp
