module(
    name = "garraiobide",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "googletest", version = "1.15.2")

# taywee/args 6.4.6 - header-only C++ argument parser
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "taywee_args",
    urls = ["https://github.com/Taywee/args/archive/refs/tags/6.4.6.tar.gz"],
    strip_prefix = "args-6.4.6",
    build_file_content = """
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "args",
    hdrs = ["args.hxx"],
    includes = ["."],
    visibility = ["//visibility:public"],
)
""",
)

# cpp-httplib v0.18.3 - header-only HTTP/HTTPS library
http_archive(
    name = "cpp_httplib",
    urls = ["https://github.com/yhirose/cpp-httplib/archive/refs/tags/v0.18.3.tar.gz"],
    strip_prefix = "cpp-httplib-0.18.3",
    build_file_content = """
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "httplib",
    hdrs = ["httplib.h"],
    includes = ["."],
    visibility = ["//visibility:public"],
)
""",
)

# nlohmann/json v3.11.3 - header-only JSON library
http_archive(
    name = "nlohmann_json",
    urls = ["https://github.com/nlohmann/json/archive/refs/tags/v3.11.3.tar.gz"],
    strip_prefix = "json-3.11.3",
    build_file_content = """
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "json",
    hdrs = glob(["include/nlohmann/**/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
)
""",
)
