module(
    name = "garraiobide",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "googletest", version = "1.15.2")

# taywee/args 6.4.6 - header-only C++ argument parser
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "taywee_args",
    urls = ["https://github.com/Taywee/args/archive/refs/tags/6.4.6.tar.gz"],
    strip_prefix = "args-6.4.6",
    build_file_content = """
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "args",
    hdrs = ["args.hxx"],
    includes = ["."],
    visibility = ["//visibility:public"],
)
""",
)

# cpp-httplib v0.18.3 - header-only HTTP/HTTPS library
http_archive(
    name = "cpp_httplib",
    urls = ["https://github.com/yhirose/cpp-httplib/archive/refs/tags/v0.18.3.tar.gz"],
    strip_prefix = "cpp-httplib-0.18.3",
    build_file_content = """
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "httplib",
    hdrs = ["httplib.h"],
    includes = ["."],
    visibility = ["//visibility:public"],
)
""",
)

# nlohmann/json v3.11.3 - header-only JSON library
http_archive(
    name = "nlohmann_json",
    urls = ["https://github.com/nlohmann/json/archive/refs/tags/v3.11.3.tar.gz"],
    strip_prefix = "json-3.11.3",
    build_file_content = """
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "json",
    hdrs = glob(["include/nlohmann/**/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
)
""",
)

# libzip v1.10.1 - C library for reading ZIP archives
http_archive(
    name = "libzip",
    urls = ["https://github.com/nih-at/libzip/releases/download/v1.10.1/libzip-1.10.1.tar.gz"],
    strip_prefix = "libzip-1.10.1",
    build_file_content = """
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "libzip",
    srcs = glob(["lib/*.c"]),
    hdrs = glob(["lib/*.h"]) + ["zipconf.h"],
    includes = ["lib", "."],
    visibility = ["//visibility:public"],
    defines = ["ZIP_STATIC"],
    linkopts = ["-lz"],
)
""",
    patch_cmds = [
        """cat > zipconf.h << 'EOF'
#ifndef _HAD_ZIPCONF_H
#define _HAD_ZIPCONF_H

#include <stdint.h>

#define LIBZIP_VERSION "1.10.1"
#define LIBZIP_VERSION_MAJOR 1
#define LIBZIP_VERSION_MINOR 10
#define LIBZIP_VERSION_MICRO 1

#define ZIP_STATIC 1

#define ZIP_NULLABLE_DEFINES
#define _Nullable
#define _Nonnull

typedef int8_t zip_int8_t;
typedef uint8_t zip_uint8_t;
typedef int16_t zip_int16_t;
typedef uint16_t zip_uint16_t;
typedef int32_t zip_int32_t;
typedef uint32_t zip_uint32_t;
typedef int64_t zip_int64_t;
typedef uint64_t zip_uint64_t;

#define ZIP_INT8_MIN (-128)
#define ZIP_INT8_MAX 127
#define ZIP_UINT8_MAX 255
#define ZIP_INT16_MIN (-32768)
#define ZIP_INT16_MAX 32767
#define ZIP_UINT16_MAX 65535
#define ZIP_INT32_MIN (-2147483647-1)
#define ZIP_INT32_MAX 2147483647
#define ZIP_UINT32_MAX 4294967295U
#define ZIP_INT64_MIN (-9223372036854775807LL-1)
#define ZIP_INT64_MAX 9223372036854775807LL
#define ZIP_UINT64_MAX 18446744073709551615ULL

#endif /* _HAD_ZIPCONF_H */
EOF""",
        """cat > lib/config.h << 'EOF'
#ifndef HAD_CONFIG_H
#define HAD_CONFIG_H

#define HAVE_STDBOOL_H 1
#define HAVE_STRINGS_H 1
#define HAVE_UNISTD_H 1
#define HAVE_STDINT_H 1
#define HAVE_INTTYPES_H 1
#define HAVE_STRING_H 1
#define HAVE_STDLIB_H 1
#define HAVE_STDIO_H 1
#define HAVE_STRCASECMP 1
#define HAVE_STRDUP 1
#define HAVE_FTELLO 1
#define HAVE_FSEEKO 1
#define HAVE_LOCALTIME_R 1
#define HAVE_OPEN 1
#define HAVE_SNPRINTF 1
#define HAVE_GETRANDOM 1
#define HAVE_FCHMOD 1
#define SIZEOF_OFF_T 8
#define SIZEOF_SIZE_T 8
#define __INT8_LIBZIP 1
#define INT8_T_LIBZIP int8_t
#define UINT8_T_LIBZIP uint8_t
#define __INT16_LIBZIP 2
#define INT16_T_LIBZIP int16_t
#define UINT16_T_LIBZIP uint16_t
#define __INT32_LIBZIP 4
#define INT32_T_LIBZIP int32_t
#define UINT32_T_LIBZIP uint32_t
#define __INT64_LIBZIP 8
#define INT64_T_LIBZIP int64_t
#define UINT64_T_LIBZIP uint64_t
#define PACKAGE "libzip"
#define VERSION "1.10.1"

#endif /* HAD_CONFIG_H */
EOF""",
        "rm -f lib/zip_crypto_win.c lib/zip_crypto_openssl.c lib/zip_crypto_mbedtls.c lib/zip_crypto_gnutls.c lib/zip_crypto_commoncrypto.c",
        "rm -f lib/zip_winzip_aes.c lib/zip_source_winzip_aes_decode.c lib/zip_source_winzip_aes_encode.c",
        "rm -f lib/zip_random_win32.c lib/zip_random_uwp.c",
        "rm -f lib/zip_source_file_win32.c lib/zip_source_file_win32_named.c lib/zip_source_file_win32_utf8.c lib/zip_source_file_win32_write.c lib/zip_source_file_win32_ansi.c lib/zip_source_file_win32_utf16.c",
    ],
)
