load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "garraiobide",
    srcs = ["main.cc"],
    deps = [
        "//src/adapters/ingestion:mock_ingestion",
        "//src/adapters/persistence:mock_persistence",
        "//src/adapters/ui:mock_presentation",
        "//src/app",
        "//src/app:parse_args",
        "//src/core/domain",
    ],
)
