load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "api_server",
    srcs = ["main.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/adapters/http:http_adapter",
        "//src/adapters/ingestion:mock_ingestion",
        "//src/adapters/persistence:file_persistence",
        "//src/adapters/ui:mock_presentation",
        "//src/app",
        "@taywee_args//:args",
    ],
)
