load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "mock_persistence",
    srcs = ["mock_persistence_adapter.cc"],
    hdrs = ["mock_persistence_adapter.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/core/domain",
        "//src/core/ports",
    ],
)
