load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "mock_presentation",
    srcs = ["mock_presentation_adapter.cc"],
    hdrs = ["mock_presentation_adapter.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/core/domain",
        "//src/core/ports",
    ],
)
