load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "gtfs_parser",
    srcs = ["gtfs_parser.cc"],
    hdrs = [
        "csv_parser.h",
        "gtfs_parser.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/core/domain",
        "//src/core/ports",
    ],
)

cc_library(
    name = "gtfs_ingestion",
    srcs = ["gtfs_ingestion_adapter.cc"],
    hdrs = ["gtfs_ingestion_adapter.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":gtfs_parser",
        "//src/core/domain",
        "//src/core/ports",
        "@libzip",
    ],
)
